feat: 升级Jackson3